--- a/admin-login.html
+++ b/admin-login.html
@@ -182,23 +182,7 @@
         // =========================================
 
         window.addEventListener('load', () => {
-            // Cinematic card entry with back.out bounce from requirements
-            gsap.from('#admin-login-card', {
-                scale: 0.8,
-                opacity: 0,
-                duration: 1.2,
-                ease: 'back.out(1.7)'
-            });
-
-            // Stagger children
-            gsap.from('#admin-login-card > *', {
-                opacity: 0,
-                y: 15,
-                stagger: 0.1,
-                duration: 0.8,
-                ease: 'power3.out',
-                delay: 0.5
-            });
+            // Unified transitions via main.js
         });
 
         // Interactive field labels — pop up & orange on focus
