--- a/flights.html
+++ b/flights.html
@@ -373,10 +373,7 @@
 
         // Page Specific Entrance
         window.addEventListener('load', () => {
-            // Unique sidebar reveal
-            gsap.from(".reveal-left", { x: -30, opacity: 0, duration: 1.2, ease: "power4.out", delay: 0.2 });
-
-            // Note: Navbar, Curtain, Magnetic, and generic Reveal Up are handled by main.js
+            // Unified transitions via main.js
         });
     </script>
 </body>
