--- a/admin-flights.html
+++ b/admin-flights.html
@@ -284,7 +284,7 @@
                         </div>
                     `;
                 });
-                gsap.from(".flight-row", { opacity: 0, x: 20, stagger: 0.05, duration: 1, ease: "power4.out" });
+                // Unified transitions via main.js
             });
         }
 
@@ -363,11 +363,7 @@
 
         window.addEventListener('load', () => {
             loadFlights();
-            gsap.from("#sidebar", { x: -100, opacity: 0, duration: 1.5, ease: "expo.out" });
-            gsap.to(".reveal-up", { opacity: 1, y: 0, stagger: 0.2, duration: 1.5, ease: "expo.out", delay: 0.2 });
-
-            // Curtain Entry
-            gsap.to("#page-curtain", { left: "-100%", duration: 1.2, ease: "expo.inOut" });
+            // Unified transitions via main.js
         });
     </script>
 </body>
