--- a/package-details.html
+++ b/package-details.html
@@ -235,11 +235,7 @@
             // Re-init global FX
             if (typeof initMagneticButtons === 'function') initMagneticButtons();
 
-            // GSAP Entrance
-            gsap.from("#hero-img", { scale: 1.2, duration: 4, ease: "power2.out" });
-            gsap.from("#hero-text", { opacity: 0, y: 50, duration: 1.5, ease: "power4.out", delay: 0.5 });
-            gsap.from("#main-content", { opacity: 0, x: -50, duration: 1.2, ease: "power3.out", delay: 1 });
-            gsap.from("#sidebar-content", { opacity: 0, x: 50, duration: 1.2, ease: "power3.out", delay: 1.2 });
+            // Unified transitions via main.js
         }
     </script>
 
